k8s/apps/base/demo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
  namespace: demo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/whitelist-source-range: 0.0.0.0/0
  labels:
    k8s-app: demo-ingress
    part-of: demo
spec:
  rules:
    - host: demo.k8s-local.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: main-service
                port:
                  name: http
          - path: /apple
            pathType: Prefix
            backend:
              service:
                name: apple-service
                port:
                  name: http
          - path: /banana
            pathType: Prefix
            backend:
              service:
                name: banana-service
                port:
                  name: http
